--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Diphylleia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Diphylleia&family=Raleway&display=swap');
+
+body {
+  font-family: Raleway;
+}
+
+h1 {
+  font-family: Diphylleia;
+}
+
